--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://github.com/felipematheus1337/Gerenciador-de-Tarefas-NodeJS#readme",
   "dependencies": {
     "consign": "^0.1.6",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.25.2",
+    "sqlite3": "^5.1.2"
   }
 }
