--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/felipematheus1337/Gerenciador-de-Tarefas-NodeJS#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "consign": "^0.1.6",
     "express": "^4.18.2",
     "sequelize": "^6.25.2",
