--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "body-parser": "^1.20.1",
     "consign": "^0.1.6",
     "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^6.25.2",
     "sqlite3": "^5.1.2"
   }
